applications/scratch-1826801/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-1826801
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-1826801

  template:
    metadata:
      labels:
        app: scratch-1826801

    spec:
      containers:
      - name: scratch-1826801
        image: scratch:latest

        ports:
        - containerPort: 80
