applications/scratch-1826801/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-1826801
  namespace: scratch

spec:
  selector:
    app: scratch-1826801

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
